cabal-version:       2.2
name:                lnforum-empty
version:             0.1.0.7
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/adarqui/lnforum-empty#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Andrew Darqui
maintainer:          andrew.darqui@gmail.com
copyright:           2016 Andrew Darqui
category:            Development
build-type:          Simple

library
  hs-source-dirs:      src
  exposed-modules:     LN.Empty
  build-depends:       base < 5
  ghc-options:         -Wall -Werror
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adarqui/lnforum-empty
